Fixed bug #52082 (character_set_client & character_set_connection reset after mysqli_change_user())

libmysql >= 5.1.23 will PASS, older library versions will fail



git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@300435 c90b9560-bf6c-de11-be94-00142212c4b1